turtleart.triangleflat.TriangleFlat.scala.error
Compilation error:
TriangleFlat:1: error: ')' expected but integer literal found.
override def run() { for (1<-to 3 ) {avance(200);droite(120)}
                                ^TriangleFlat:2: error: illegal start of simple expression
} 
^