turtleart.triangleflat.TriangleFlat.scala.code
override def run() { for (1<-to 3 ) {avance(200);droite(120)}
}